installed express, added gitignore to ignore node_modules

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/JoeMics/tinyapp/issues"
   },
-  "homepage": "https://github.com/JoeMics/tinyapp#readme"
+  "homepage": "https://github.com/JoeMics/tinyapp#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
